--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,6 @@ zuul.routes.userservice.path=/Test/**
 zuul.routes.userservice.strPrefix=true
 zuul.routes.userservice.url=http://127.0.0.1:8099/Test/
 
+#zuul.routes.userservice.serviceId=Test
+
 
