--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,14 +1,12 @@
 
 
 #jdbc连接配置
-db.name=security
-security.datasource.url = jdbc:mysql://192.168.2.210:3306/security?characterEncoding=utf8
+db.name=security,security1
+security.datasource.url = jdbc:mysql://127.0.0.1:3306/security?characterEncoding=utf8
 security.datasource.username = root
 security.datasource.password = root
 
 
-db.name=security1
-security1.datasource.url = jdbc:mysql://localhost:3306/security1?characterEncoding=utf8
+security1.datasource.url = jdbc:mysql://127.0.0.1:3306/security?characterEncoding=utf8
 security1.datasource.username = root
 security1.datasource.password = root
-
