--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jmx.default-domain=security
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 server.contextPath=/security
-server.port = 8080
+server.port = 8090
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
@@ -14,7 +14,7 @@ spring.http.encoding.enabled=true
 
 
 #redis
-spring.redis.hostName=127.0.0.1
+spring.redis.host=127.0.0.1
 #redis 端口号
 spring.redis.port=6379
 #redis 密码
