配置文件读写优化

--- a/src/main/resources/security.properties
+++ b/src/main/resources/security.properties
@@ -1,12 +1,27 @@
 
 
 #jdbc连接配置
-db.name=security,security1
+security.name=security,security1
+
 security.datasource.url = jdbc:mysql://127.0.0.1:3306/security?characterEncoding=utf8
 security.datasource.username = root
 security.datasource.password = root
 
 
+
+#登陆
+security.allow.url=/admin/login
+#swagger文档
+security.allow.url=/swagger-resources
+#swagger文档
+security.allow.url=/v2/api-docs
+#加载菜单
+security.allow.url=/loadAdminMenu
+# 重新加载db链接
+security.allow.url=/dbRefresh/refresh
+
+
 security1.datasource.url = jdbc:mysql://127.0.0.1:3306/security?characterEncoding=utf8
 security1.datasource.username = root
 security1.datasource.password = root
+
