--- a/security-demo/src/main/resources/application.properties
+++ b/security-demo/src/main/resources/application.properties
@@ -36,3 +36,5 @@ zuul.routes.userservice.url=http://127.0.0.1:8099/Test/
 #zuul.routes.userservice.serviceId=Test
 
 
+application.properties
+security.properties
