--- a/security-demo/src/main/resources/application.properties
+++ b/security-demo/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 server.contextPath=/security
 
+logging.level.root=debug
+
 
 server.port = 8090
 server.tomcat.uri-encoding=UTF-8
