--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>security-core</module>
+        <module>security-db</module>
         <module>security-demo</module>
         <module>security-lte</module>
     </modules>
