--- a/security-demo/src/main/resources/application.properties
+++ b/security-demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
+#eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
 spring.application.name = security
 
 spring.jmx.default-domain=security
@@ -7,7 +7,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 server.contextPath=/security
 
-logging.level.root=debug
+logging.level.root=info
 
 
 server.port = 8090
